--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
+debug=true
+
+# Buckets that must be created on first run
 pa.workflow_catalog.default.buckets=Catalog, Templates
 
 server.compression.enabled=true
 server.contextPath=/
 
+# DataSource settings: set here your own configurations for the database connection.
 #spring.datasource.driverClassName=org.hsqldb.jdbcDriver
 #spring.datasource.url=jdbc:hsqldb:file:/tmp/proactive/workflow-catalog;create=true;hsqldb.tx=mvcc;hsqldb.applog=1;hsqldb.sqllog=0;hsqldb.write_delay=false
 #spring.datasource.username=root
 #spring.datasource.password=
 
+# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+# Disable Spring banner
 spring.main.banner_mode=off
