--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,13 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>org.ow2.proactive.workflow_catalog.rest.Application</param-value>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
     </context-param>
-
-    <listener>
-        <listener-class>org.springframework.boot.legacy.context.web.SpringBootContextLoaderListener</listener-class>
-    </listener>
 
     <servlet>
         <servlet-name>appServlet</servlet-name>
