--- a/build.gradle
+++ b/build.gradle
@@ -105,8 +105,8 @@ dependencies {
 
     compile 'commons-fileupload:commons-fileupload:1.3.1'
 
-    compile 'com.querydsl:querydsl-jpa:4.0.8'
-    compile 'com.querydsl:querydsl-apt:4.0.8:jpa'
+    compile 'com.mysema.querydsl:querydsl-jpa:3.7.1'
+    compile 'com.mysema.querydsl:querydsl-apt:3.7.1:jpa'
 
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.3.2.RELEASE'
     compile('org.springframework.boot:spring-boot-starter-web:1.3.2.RELEASE') {
