Remove default bucket Catalog

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.ow2.proactive.workflow_catalog.rest=info
 logging.level.org.springframework.web=info
 
 # Buckets that must be created on first run
-pa.workflow_catalog.default.buckets=Catalog, Templates
+pa.workflow_catalog.default.buckets=Templates
 
 # Embedded server configuration
 server.compression.enabled=true
