--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configure logging level
-logging.level.org.hibernate=off
+logging.level.org.hibernate=debug
 logging.level.org.ow2.proactive.workflow_catalog.rest=info
 logging.level.org.springframework.web=info
 
